--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
@@ -7,9 +7,16 @@ Description: AkibaRika site theme.
 Version: 3.0
 License: CC BY-NC-SA 4.0
 */
-////////////////////setup
+
+//////////////////// Setup ////////////////////
+//
+@import "reset/normalize.less";
 @import "variables.less";
 @import "mixins.less";
 @import "icons.less";
-////////////////////start
+@import "setup.less";
+
+//////////////////// Start ////////////////////
+//
+@import "share.less";
 @import "style.less";
