--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/variables.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/variables.less
@@ -1,17 +1,44 @@
-////color
+//
+// Variables
+// --------------------------------------------------
+
+//== Colors
+//
+//## Gray and brand colors
+
 @primary-color: #986794;
 @gray-light: #d8d8d8;
-
 @white-color: #fff;
 
-////font
+
+@format-status-color:#742e34;
+@format-aside-color:#5c4942;
+@format-gallery-color:#4a6e68;
+@format-link-color:#51492d;
+@format-quote-color:#094a40;
+
+
+//== Typography
+//
+//## Font, line-height, and color for body text, headings, and more.
+
 @main-font: 'Roboto', 'Helvetica Neue', Helvetica, 'Hiragino Sans GB', 'Hiragino Sans GB W3', 'Microsoft YaHei', sans-serif;
 
 @f-small-size: 12px;
 @f-normal-size : 14px;
 @f-large-size: 16px;
 
-////sprite
+/*
+LESS variables are information about icon's compiled state, stored under its original file name
+
+.icon-home {
+  width: @icon-home-width;
+}
+
+The large array-like variables contain all information about a single icon
+@icon-home: x y offset_x offset_y width height total_width total_height image_path;
+*/
+
 @i-grid-icon-2: 0, -92px;
 @i-grid-icon-3: 0, -138px;
 @i-grid-icon-4: 0, -184px;
