--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
@@ -18,5 +18,8 @@ License: CC BY-NC-SA 4.0
 
 //////////////////// Start ////////////////////
 //
+@import "keyframes.less";
 @import "share.less";
+@import "heading.less";
+@import "content.less";
 @import "style.less";
