--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/content.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/content.less
@@ -232,7 +232,7 @@
             .rotateY(180deg);
             .transition(all .8s ease-in-out);
             a {
-              background-color : @primary-color;
+              background-color : @brand-primary;
               border-radius    : 50%;
               color            : @white-color;
               display          : block;
@@ -447,7 +447,7 @@
             opacity     : .7;
             .transition(all .3s ease);
             &:hover {
-              color   : @primary-color;
+              color   : @brand-primary;
               opacity : 1;
             }
             span {
