--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/setup.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/setup.less
@@ -30,12 +30,12 @@ svg {
 }
 
 ::selection {
-  background : @primary-color;
+  background : @brand-primary;
   color      : @white-color;
 }
 
 ::-moz-selection {
-  background : @primary-color;
+  background : @brand-primary;
   color      : @white-color;
 }
 
@@ -85,9 +85,9 @@ blockquote {
     display : inline;
   }
   &:hover {
-    border-left : 10px solid @primary-color;
+    border-left : 10px solid @brand-primary;
     &::before {
-      color : @primary-color;
+      color : @brand-primary;
     }
   }
   &::before {
