--- a/wp-content/themes/Lilim-Theme-Wordpress/css/styles.css
+++ b/wp-content/themes/Lilim-Theme-Wordpress/css/styles.css
@@ -821,7 +821,7 @@ a.share-button {
   -webkit-border-image: none;
        -o-border-image: none;
           border-image: none;
-  border: 1px solid #d8d8d8;
+  border: 1px solid #999999;
   float: left;
   margin: 0px 10px 30px;
   width: 440px;
@@ -1457,6 +1457,232 @@ a.share-button {
   -ms-transform: translateX(40px);
   transform: translateX(40px);
 }
+#comments {
+  font-size: 14px;
+  margin: 20px 0 0 0;
+}
+#comments .commentlist li {
+  list-style: none outside none;
+}
+#comments .commentlist li .comment-body {
+  margin-bottom: 20px;
+}
+#comments .commentlist li .comment-body:before,
+#comments .commentlist li .comment-body:after {
+  content: " ";
+  display: table;
+}
+#comments .commentlist li .comment-body:after {
+  clear: both;
+}
+#comments .commentlist li .comment-body:before,
+#comments .commentlist li .comment-body:after {
+  content: " ";
+  display: table;
+}
+#comments .commentlist li .comment-body:after {
+  clear: both;
+}
+#comments .commentlist li .comment-body .comment-author {
+  float: left;
+  height: 60px;
+  margin: 0;
+  position: relative;
+  width: 60px;
+}
+#comments .commentlist li .comment-body .comment-author img {
+  border-radius: 60px;
+  display: block;
+}
+#comments .commentlist li .comment-body .comment-author .comment-reply {
+  border-radius: 50%;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+#comments .commentlist li .comment-body .comment-author .comment-reply a {
+  background-color: #986794;
+  border-radius: 50%;
+  color: #fff;
+  display: block;
+  font-weight: normal;
+  height: 100%;
+  line-height: 60px;
+  opacity: 0;
+  text-align: center;
+  text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+  vertical-align: middle;
+  width: 100%;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+#comments .commentlist li .comment-body .comment-author .comment-reply a:hover {
+  opacity: 1;
+}
+#comments .commentlist li .comment-body .comment-wrapper {
+  display: block;
+  padding-left: 75px;
+}
+#comments .commentlist li .comment-body .comment-wrapper .comment-head {
+  margin: 5px 0 10px;
+}
+#comments .commentlist li .comment-body .comment-wrapper .comment-head span.name a {
+  color: #424242;
+}
+#comments .commentlist li .comment-body .comment-wrapper .comment-head span.name a:hover {
+  color: #ffffff;
+}
+#comments .commentlist li .comment-body .comment-wrapper .comment-head span.comment-text p {
+  color: #444;
+  display: inline;
+  font-size: 13px;
+  padding-left: 5px;
+}
+#comments .commentlist li .comment-body .comment-wrapper .comment-time {
+  color: #888;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+#comments .navigation {
+  display: block;
+  height: 40px;
+  margin: 50px 0 20px;
+  position: relative;
+}
+#comments .navigation a,
+#comments .navigation span {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  border-radius: 9px;
+  color: #666;
+  cursor: pointer;
+  display: block;
+  float: left;
+  font-size: 12px;
+  height: 36px;
+  line-height: 36px;
+  margin-right: 10px;
+  padding: 0 15px;
+  vertical-align: middle;
+  width: auto;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+#comments .navigation a.dots,
+#comments .navigation span.dots {
+  cursor: default;
+}
+#comments .navigation a.current,
+#comments .navigation span.current {
+  border-color: #986794;
+}
+#comments .navigation a:hover,
+#comments .navigation span:hover {
+  border-color: #ffffff;
+}
+#comments #respond {
+  margin-bottom: 60px;
+}
+#comments #respond .cancel_comment_reply a {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+#comments #respond .cancel_comment_reply a:hover {
+  color: #ffffff;
+}
+#comments #respond .commenter {
+  position: relative;
+}
+#comments #respond .commenter .author_info .user_logged {
+  margin: 15px 0;
+}
+#comments #respond .commenter .author_info .user_logged a {
+  color: #424242;
+  border-bottom: 1px dotted #424242;
+}
+#comments #respond .commenter .author_info .user_logged a:hover {
+  color: #ffffff;
+  border-bottom-color: #ffffff;
+}
+#comments #respond .commenter .author_info .user_logged a.user_logout {
+  float: right;
+}
+#comments #respond .commenter .author_info input[type='text'] {
+  background-color: #fafafa;
+  border: 1px solid #ffebe1;
+  outline: medium none;
+  padding: 0 20px;
+  vertical-align: middle;
+}
+#comments #respond .commenter .author_info input[type='text']:focus {
+  background-color: #ffffff;
+}
+#comments #respond .commenter .author_info p {
+  margin: 15px 0;
+}
+#comments #respond .commenter .author_info p #author {
+  float: left;
+  line-height: 60px;
+  width: 49%;
+}
+#comments #respond .commenter .author_info p #email {
+  float: right;
+  line-height: 60px;
+  width: 49%;
+}
+#comments #respond .commenter .author_info p #url {
+  line-height: 60px;
+  width: 100%;
+}
+#comments #respond textarea {
+  font-size: 14px;
+  height: 150px;
+  margin-bottom: 15px;
+  padding: 10px 20px;
+  resize: vertical;
+  vertical-align: baseline;
+  width: 100%;
+}
+#comments #respond textarea {
+  background-color: #fafafa;
+  border: 1px solid #ffebe1;
+  outline: medium none;
+}
+#comments #respond textarea:focus {
+  background-color: #ffffff;
+}
+#comments #respond #submit {
+  -moz-border-bottom-colors: none;
+  -moz-border-left-colors: none;
+  -moz-border-right-colors: none;
+  -moz-border-top-colors: none;
+  background-color: #b95e34;
+  border-bottom: 2px solid rgba(58, 29, 16, 0.5);
+  -webkit-border-image: none;
+       -o-border-image: none;
+          border-image: none;
+  border-left: medium none;
+  border-right: medium none;
+  border-top: medium none;
+  color: #ffffff;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 600;
+  height: 62px;
+  letter-spacing: 1px;
+  margin: 0;
+  overflow: hidden;
+  width: 100%;
+}
+#comments #respond #submit:hover {
+  background-color: #60311b;
+}
 #menu-mobile {
   display: none;
   position: fixed;
@@ -1792,7 +2018,7 @@ a.share-button {
 }
 #header nav.main .search-text .bt-search {
   position: absolute;
-  top: 2px;
+  top: 1px;
   right: 0;
   display: block;
   font-size: 18px;
@@ -2211,9 +2437,9 @@ a.share-button {
 #page-wrap .bookmarks {
   display: block;
   background: none repeat scroll 0 0 #fafafa;
-  border-left: 1px solid #d8d8d8;
-  border-right: 1px solid #d8d8d8;
-  border-bottom: 2px solid #d8d8d8;
+  border-left: 1px solid #999999;
+  border-right: 1px solid #999999;
+  border-bottom: 2px solid #999999;
   margin: 20px auto 20px;
   position: relative;
   overflow: hidden;
@@ -2608,7 +2834,7 @@ a.share-button {
   transition: color 0.3s ease;
 }
 #page-wrap #single.wrap-work .work-content .work-container .content-list .work-here .wrap .work-info {
-  border-bottom: 1px solid #d8d8d8;
+  border-bottom: 1px solid #999999;
   margin-top: 10px;
   padding: 5px 20px 10px;
   text-align: center;
@@ -3014,320 +3240,9 @@ a.share-button {
     width: 37px !important;
   }
 }
-#comments {
-  width: 100%;
-  padding: 20px 0 0 0;
-  height: auto;
-  overflow: hidden;
-}
-#comments .pagination {
-  display: block;
-  height: 40px;
-  margin: 50px 0 20px;
-  position: relative;
-}
-#comments .pagination a,
-#comments .pagination span {
-  -moz-user-select: none;
-  -webkit-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-  background-color: #ffffff;
-  border: 1px solid #ddd;
-  border-radius: 9px;
-  color: #666;
-  cursor: pointer;
-  display: block;
-  float: left;
-  font-size: 12px;
-  height: 36px;
-  line-height: 36px;
-  margin-right: 10px;
-  padding: 0 15px;
-  vertical-align: middle;
-  width: auto;
-  -webkit-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-#comments .pagination a.dots,
-#comments .pagination span.dots {
-  cursor: default;
-}
-#comments .pagination a.current,
-#comments .pagination span.current {
-  border-color: #986794;
-}
-#comments .pagination a:hover,
-#comments .pagination span:hover {
-  border-color: #986794;
-}
-#comments .commentscount h3 {
-  font-size: 20px;
-}
-#comments .commentscount h3 span {
-  color: #986794;
-}
-#comments .nocomments {
-  font-size: 14px;
-  width: 100%;
-  border-top: 1px solid #ccc;
-  margin-top: 5px;
-  padding: 15px;
-}
-#comments .commentclosed {
-  font-size: 14px;
-  margin-top: 5px;
-  padding: 15px;
-}
-#comments .commentlist {
-  margin: 10px 0 10px 0;
-}
-#comments .commentlist li {
-  list-style: none;
-  height: auto;
-  overflow: hidden;
-  padding-bottom: 15px;
-}
-#comments .commentlist li .ajax-notice a {
-  color: #986794;
-  text-decoration: underline;
-}
-#comments .commentlist li .comment-body {
-  width: 100%;
-  font-size: 14px;
-  padding: 15px 0;
-  border-top: 1px solid #ccc;
-  position: relative;
-  height: auto;
-  overflow: hidden;
-}
-#comments .commentlist li .comment-body .comment-avatar {
-  box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.75);
-  position: relative;
-  border-radius: 65px;
-  background-color: white;
-  width: 50px;
-  height: 50px;
-}
-#comments .commentlist li .comment-body .comment-avatar img {
-  display: block;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.22);
-  border-radius: 65px;
-  width: 50px;
-  height: 50px;
-  -webkit-transition: all 0.8s ease-in-out;
-  transition: all 0.8s ease-in-out;
-}
-#comments .commentlist li .comment-body .comment-avatar img:hover {
-  -webkit-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  transform: rotateY(180deg);
-}
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-  #comments .commentlist .children .comment-content {
-    max-width: 230px;
-  }
-}
-#comments .commentlist .children .comment-avatar img {
-  width: 32px;
-  height: 32px;
-}
-#comments .commentlist .comment-content {
-  padding-left: 60px;
-  max-width: 550px;
-  z-index: 10;
-}
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-  #comments .commentlist .comment-content {
-    max-width: 260px;
-  }
-}
-@media only screen and (max-width: 479px) {
-  #comments .commentlist .comment-content {
-    width: 100%;
-  }
-}
-#comments .commentlist .comment-content .comment-name a {
-  color: #ba89b6;
-}
-#comments .commentlist .comment-content .comment-name a:hover {
-  text-shadow: 0 0 2px #ba89b6;
-}
-#comments .commentlist .comment-content .comment-entry {
-  font-size: 14px;
-  line-height: 150%;
-  margin-top: 3px;
-  color: #666;
-}
-@media only screen and (max-width: 959px) {
-  #comments .commentlist .comment-content .comment-entry img {
-    width: 37px;
-  }
-}
-#comments .commentlist .comment-content .comment-meta {
-  font-size: 12px;
-  color: #999;
-  margin-top: 3px;
-  height: auto;
-  overflow: hidden;
-}
-#comments .commentlist .comment-content .comment-meta a {
-  color: #666;
-}
-#comments .commentlist .comment-content .comment-meta a:hover {
-  color: #ba89b6;
-}
-#comments .commentlist .comment-content .comment-meta .comment-reply {
-  margin-left: 20px;
-}
-#comments .commentlist .comment-content .comment-meta .comment-date {
-  text-transform: uppercase;
-}
-#comments .commentlist .comment-content .comment-meta .useragent {
-  margin-left: 20px;
-  margin-top: -2px;
-}
-#comments .commentlist .comment-content .comment-meta .useragent span {
-  font-size: 12px;
-}
-#comments .commentlist .comment-floor {
-  color: #ddd;
-  height: 60px;
-  position: absolute;
-  right: 0;
-  top: 5px;
-  z-index: 5;
-}
-#comments .commentlist .comment-floor span {
-  font-size: 60px;
-  font-style: italic;
-}
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-  #comments .commentlist .comment-floor span {
-    font-size: 34px;
-  }
-}
-#comments .commentlist .comment-floor strong {
-  font-size: 16px;
-}
-@media only screen and (max-width: 479px) {
-  #comments .commentlist .comment-floor {
-    display: none;
-  }
-}
-#comments #respond {
-  margin: 20px auto 40px;
-  padding-top: 20px;
-  width: 100%;
-}
-@media only screen and (max-width: 479px) {
-  #comments #respond {
-    margin-bottom: 60px;
-  }
-}
-#comments #respond #commentform {
-  line-height: 0;
-}
-#comments #respond #commentform .user_logged {
-  font-size: 12px;
-  height: 29px;
-  line-height: 29px;
-  vertical-align: middle;
-  padding-left: 32px;
-  text-shadow: none;
-}
-#comments #respond #commentform .user_logout {
-  font-size: 12px;
-}
-#comments #respond .comtool {
-  height: 35px;
-  background-color: #e9e9e9;
-  border: 1px solid #e9e9e9;
-}
-@media only screen and (max-width: 767px) {
-  #comments #respond .comtool {
-    display: none;
-  }
-}
-#comments #respond .comtool .smiley {
-  padding: 10px 0 5px 15px;
-}
-#comments #respond .comtool .smiley a {
-  margin-right: 15px;
-}
-#comments #respond .comtool .cancel_comment_reply a {
-  display: block;
-  padding: 10px 5px 5px 0;
-  line-height: normal;
-}
-#comments #respond .author_info {
-  height: auto;
-  background-color: #eaeaea;
-}
-#comments #respond .author_info input {
-  font-size: 12px;
-  height: 29px;
-  color: #555;
-  font-weight: 400;
-  width: 155px;
-  border: none;
-  padding: 0 10px 0 30px;
-  margin: 0;
-}
-@media only screen and (max-width: 767px) {
-  #comments #respond .author_info input {
-    width: 100%;
-  }
-}
-#comments #respond .author_info #author {
-  background-position: 4px 4px;
-  border-bottom-left-radius: 5px;
-}
-#comments #respond .author_info #email {
-  background-position: 0px -47px;
-}
-#comments #respond .author_info #url {
-  background-position: 0px -22px;
-}
-#comments #respond .author_info #submit {
-  font-size: 12px;
-  font-weight: 700;
-  float: right;
-  background: #ccc;
-  width: 140px;
-  cursor: pointer;
-  color: #555;
-  border: none;
-  margin: 0;
-  padding: 0;
-  height: 29px;
-}
-#comments #respond .author_info #submit:hover {
-  background: #3f3f3f;
-  color: #ffffff;
-}
-#comments textarea#comment {
-  padding: 5px;
-  height: 150px;
-  min-height: 130px;
-  color: #111;
-  width: 100%;
-  border: 1px solid #e9e9e9;
-  resize: vertical;
-  font-size: 13px;
-  margin: 0;
-  overflow: auto;
-  background-color: #f7f7f7;
-}
-#comments textarea#comment:hover {
-  border-color: #ccc;
-}
-#comments textarea#comment:focus {
-  background-color: #ffffff;
-}
 .navigation {
   background: none repeat scroll 0 0 #ffffff;
-  border-color: #d8d8d8;
+  border-color: #999999;
   border-style: solid;
   border-width: 1px 0 1px;
   display: block;
@@ -3358,8 +3273,8 @@ a.share-button {
   width: 60px;
 }
 .navigation li a {
-  border-right: 1px solid #d8d8d8;
-  border-bottom: 1px solid #d8d8d8;
+  border-right: 1px solid #999999;
+  border-bottom: 1px solid #999999;
 }
 .navigation li a:hover {
   background: none repeat scroll 0 0 #f2f2f2;
