--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/share.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/share.less
@@ -16,7 +16,7 @@
 .share-button,
 .share-toggle-button {
   position      : absolute;
-  background  : lighten(@primary-color, 15.5%);
+  background  : lighten(@brand-primary, 15.5%);
   display       : inline-block;
   left          : 50%;
   top           : 50%;
@@ -32,7 +32,7 @@
   outline       : none;
   .transition(background .25s ease);
   &:hover {
-    background  : lighten(@primary-color, 9.5%);
+    background  : lighten(@brand-primary, 9.5%);
   }
 }
 
