--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/styles.less
@@ -22,4 +22,5 @@ License: CC BY-NC-SA 4.0
 @import "share.less";
 @import "heading.less";
 @import "content.less";
+@import "comment.less";
 @import "style.less";
