--- a/wp-content/themes/Lilim-Theme-Wordpress/css/styles.css
+++ b/wp-content/themes/Lilim-Theme-Wordpress/css/styles.css
@@ -1662,7 +1662,7 @@ a.share-button {
   -moz-border-left-colors: none;
   -moz-border-right-colors: none;
   -moz-border-top-colors: none;
-  background-color: #b95e34;
+  background-color: #986794;
   border-bottom: 2px solid rgba(58, 29, 16, 0.5);
   -webkit-border-image: none;
        -o-border-image: none;
