--- a/wp-content/themes/Lilim-Theme-Wordpress/src/less/comment.less
+++ b/wp-content/themes/Lilim-Theme-Wordpress/src/less/comment.less
@@ -189,7 +189,7 @@
       -moz-border-left-colors   : none;
       -moz-border-right-colors  : none;
       -moz-border-top-colors    : none;
-      background-color          : #b95e34;
+      background-color          : @brand-primary;
       border-bottom             : 2px solid rgba(58, 29, 16, 0.5);
       border-image              : none;
       border-left               : medium none;
